--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18",
+    "react-particles": "^2.12.2",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "postcss": "^8",
