--- a/package.json
+++ b/package.json
@@ -12,15 +12,36 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
+    "@headlessui/react": "^1.7.19",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
+    "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.6.8",
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
+    "mapbox-gl": "^3.2.0",
     "next": "14.2.5",
+    "primereact": "^10.6.5",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
+    "react-fullscreen-loading": "^0.0.4",
+    "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
     "react-particles": "^2.12.2",
-    "three": "^0.167.1"
+    "react-share": "^5.1.0",
+    "react-simple-star-rating": "^5.1.7",
+    "sweetalert2": "^11.10.7",
+    "swiper": "^11.0.7",
+    "three": "^0.167.1",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
