--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-particles": "^2.12.2",
     "react-share": "^5.1.0",
     "react-simple-star-rating": "^5.1.7",
+    "sass": "^1.77.8",
     "sweetalert2": "^11.10.7",
     "swiper": "^11.1.9",
     "three": "^0.167.1",
