--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@headlessui/react": "^1.7.19",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@react-three/drei": "^9.109.2",
@@ -31,6 +32,7 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-particles": "^2.12.2",
+    "react-scroll-parallax": "^3.4.5",
     "react-share": "^5.1.0",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.77.8",
