--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-three/postprocessing": "^2.16.2",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
+    "@tsparticles/all": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.8",
     "framer-motion": "^11.3.21",
