--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@gsap/react": "^2.1.1",
     "@headlessui/react": "^1.7.19",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@mui/material": "^5.16.7",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
