--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@formspree/react": "^2.5.1",
     "@gsap/react": "^2.1.1",
     "@headlessui/react": "^1.7.19",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
